Pruebas unitarias, actualización de perfil de usuario

--- a/WebAppLogin/Models/Controls/CtrlInputHiddenModel.html
+++ b/WebAppLogin/Models/Controls/CtrlInputHiddenModel.html
@@ -1,4 +1,4 @@
 ﻿<div class="form-group">
-    <label for="-#Id-">-#Label-</label>
+    <label for="-#Id-" hidden>-#Label-</label>
     <input type="-#Type-" class="form-control" id="-#Id-" placeholder="-#PlaceHolder-" ColumnDataName="-#ColumnDataName-" hidden>
 </div>
